Updated Minor changes.
